src/test/deca/codegen/invalid/extension/debordementTas/TasPleinNewArray.deca
// Description : tas plein avec des newarray
// Resultat : erreur lors de ima -t avec un tas petit


{
    int[] a = new int[5];
    int[] b = new int[5];
    int[] c = new int[5];
    int[] d = new int[5];
    int[] e = new int[5];
    int[] f = new int[5];
    int[] g = new int[5];
    int[] h = new int[5];
    int[] i = new int[5];
    int[] j = new int[5];
    int[] k = new int[5];
}

